<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApptestV1"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Q1"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="問題文"
        android:textSize="24sp"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="80dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    <Button
        android:id="@+id/answerBtn3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    <Button
        android:id="@+id/answerBtn4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

</LinearLayout>