<resources>
    <string name="app_name">QuizApp</string>

    <!-- クイズ画面 -->
    <string name="question_label">問題文</string>
    <string name="count_label">Q%d</string>
    <string name="answer_btn">選択肢</string>

    <!-- 結果画面 -->
    <string name="result_title">結果</string>
    <string name="result_score">%d / 5</string>
    <string name="result_total_score">トータルスコア : %d</string>
    <string name="btn_return">もどる</string>
</resources>